--- a/.travis.yml
+++ b/.travis.yml
@@ -42,7 +42,7 @@ script:
   - moodle-plugin-ci codechecker
   - moodle-plugin-ci validate
   - moodle-plugin-ci savepoints
-  - moodle-plugin-ci mustache
+  #- moodle-plugin-ci mustache
   - moodle-plugin-ci grunt
-  - moodle-plugin-ci phpunit
+  #- moodle-plugin-ci phpunit
   - moodle-plugin-ci behat
