--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ language: php
 sudo: false
 
 addons:
-  postgresql: "9.3"
+  postgresql: "9.6"
   apt:
     packages:
       - oracle-java8-installer
@@ -15,19 +15,19 @@ cache:
     - $HOME/.npm
 
 php:
- - 5.6
+ - 7.0
  - 7.1
 
-env:
- global:
-  - MOODLE_BRANCH=MOODLE_33_STABLE
- matrix:
-  - DB=pgsql
-  - DB=mysqli
+nv:
+  - DB=pgsql MOODLE_BRANCH=MOODLE_33_STABLE
+  - DB=mysqli MOODLE_BRANCH=MOODLE_33_STABLE
+  - DB=pgsql MOODLE_BRANCH=master
+  - DB=mysqli MOODLE_BRANCH=master
 
 before_install:
   - phpenv config-rm xdebug.ini
-  - nvm install node
+  - nvm install 8.9
+  - nvm use 8.9
   - cd ../..
   - composer create-project -n --no-dev --prefer-dist moodlerooms/moodle-plugin-ci ci ^2
   - export PATH="$(cd ci/bin; pwd):$(cd ci/vendor/bin; pwd):$PATH"
@@ -42,7 +42,7 @@ script:
   - moodle-plugin-ci codechecker
   - moodle-plugin-ci validate
   - moodle-plugin-ci savepoints
-  #- moodle-plugin-ci mustache
+  - moodle-plugin-ci mustache
   - moodle-plugin-ci grunt
-  #- moodle-plugin-ci phpunit
+  - moodle-plugin-ci phpunit
   - moodle-plugin-ci behat
