--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,14 @@
 language: php
 
+notifications:
+  email:
+    recipients:
+        - rdebleu@eWallah.net
+
 sudo: false
 
 addons:
+  firefox: "47.0.1"
   postgresql: "9.6"
   apt:
     packages:
@@ -14,15 +20,17 @@ cache:
     - $HOME/.composer/cache
     - $HOME/.npm
 
+
 php:
  - 7.0
  - 7.1
 
-nv:
+env:
   - DB=pgsql MOODLE_BRANCH=MOODLE_33_STABLE
   - DB=mysqli MOODLE_BRANCH=MOODLE_33_STABLE
   - DB=pgsql MOODLE_BRANCH=master
   - DB=mysqli MOODLE_BRANCH=master
+  
 
 before_install:
   - phpenv config-rm xdebug.ini
