--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ notifications:
     recipients:
         - rdebleu@eWallah.net
 
-sudo: false
+sudo: required
 
 addons:
   firefox: "47.0.1"
@@ -23,13 +23,13 @@ cache:
 
 php:
  - 7.0
- - 7.1
+ - 7.2
 
 env:
-  - DB=pgsql MOODLE_BRANCH=MOODLE_33_STABLE
-  - DB=mysqli MOODLE_BRANCH=MOODLE_33_STABLE
   - DB=pgsql MOODLE_BRANCH=MOODLE_34_STABLE
   - DB=mysqli MOODLE_BRANCH=MOODLE_34_STABLE
+  - DB=pgsql master
+  - DB=mysqli master
   
 
 before_install:
