--- a/.travis.yml
+++ b/.travis.yml
@@ -28,9 +28,8 @@ php:
 env:
   - DB=pgsql MOODLE_BRANCH=MOODLE_34_STABLE
   - DB=mysqli MOODLE_BRANCH=MOODLE_34_STABLE
-  - DB=pgsql master
-  - DB=mysqli master
-  
+  - DB=pgsql MOODLE_BRANCH=master
+  - DB=mysqli MOODLE_BRANCH=master
 
 before_install:
   - phpenv config-rm xdebug.ini
