--- a/.travis.yml
+++ b/.travis.yml
@@ -22,14 +22,19 @@ cache:
     - $HOME/.npm
 
 php:
- - 7.0
+ - 7.1
  - 7.2
 
 env:
   - DB=pgsql MOODLE_BRANCH=MOODLE_34_STABLE
-  - DB=mysqli MOODLE_BRANCH=MOODLE_34_STABLE
+  - DB=pgsql MOODLE_BRANCH=MOODLE_35_STABLE
   - DB=pgsql MOODLE_BRANCH=master
+  - DB=mysqli MOODLE_BRANCH=MOODLE_34_STABLE
+  - DB=mysqli MOODLE_BRANCH=MOODLE_35_STABLE
   - DB=mysqli MOODLE_BRANCH=master
+  - DB=mariadb MOODLE_BRANCH=MOODLE_34_STABLE
+  - DB=mariadb MOODLE_BRANCH=MOODLE_35_STABLE
+  - DB=mariadb MOODLE_BRANCH=master
 
 before_install:
   - phpenv config-rm xdebug.ini
@@ -54,3 +59,5 @@ script:
   - moodle-plugin-ci phpunit
   - moodle-plugin-ci behat
   - moodle-plugin-ci behat --profile chrome
+after_success:
+  - moodle-plugin-ci coveralls-upload
