--- a/.travis.yml
+++ b/.travis.yml
@@ -22,13 +22,21 @@ cache:
 
 php:
  - 7.2
- - 7.3
 
 env:
-  - DB=pgsql MOODLE_BRANCH=MOODLE_36_STABLE
-  - DB=mysqli MOODLE_BRANCH=MOODLE_36_STABLE
-  - DB=mariadb MOODLE_BRANCH=MOODLE_36_STABLE
-  
+  - DB=pgsql MOODLE_BRANCH=MOODLE_37_STABLE
+  - DB=mysqli MOODLE_BRANCH=MOODLE_37_STABLE
+  - DB=mariadb MOODLE_BRANCH=MOODLE_37_STABLE
+
+matrix:
+  include:
+    - php: 7.1
+      env: DB=pgsql MOODLE_BRANCH=MOODLE_34_STABLE
+    - php: 7.2
+      env: DB=pgsql MOODLE_BRANCH=MOODLE_35_STABLE
+    - php: 7.2
+      env: DB=pgsql MOODLE_BRANCH=MOODLE_36_STABLE
+
 before_install:
   - phpenv config-rm xdebug.ini
   - nvm install 8.9
