--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,5 @@
 language: php
+dist: xenial
 
 notifications:
   email:
@@ -7,9 +8,13 @@ notifications:
 
 sudo: required
 
+services:
+  - mysql
+  
 addons:
   firefox: "47.0.1"
   postgresql: "9.6"
+  chrome: stable
   apt:
     packages:
       - openjdk-8-jre-headless
@@ -24,16 +29,20 @@ php:
  - 7.2
 
 env:
-  - DB=pgsql MOODLE_BRANCH=MOODLE_37_STABLE
-  - DB=mysqli MOODLE_BRANCH=MOODLE_37_STABLE
-  - DB=mariadb MOODLE_BRANCH=MOODLE_37_STABLE
+  - DB=pgsql MOODLE_BRANCH=master
+  - DB=mysqli MOODLE_BRANCH=master
+  - DB=mariadb MOODLE_BRANCH=master
 
 matrix:
   include:
     - php: 7.1
       env: DB=pgsql MOODLE_BRANCH=MOODLE_35_STABLE
-    - php: 7.1
+    - php: 7.2
       env: DB=pgsql MOODLE_BRANCH=MOODLE_36_STABLE
+    - php: 7.3
+      env: DB=pgsql MOODLE_BRANCH=MOODLE_37_STABLE
+    - php: 7.3
+      env: DB=pgsql MOODLE_BRANCH=master
 
 before_install:
   - phpenv config-rm xdebug.ini
@@ -42,6 +51,7 @@ before_install:
   - cd ../..
   - composer create-project -n --no-dev --prefer-dist blackboard-open-source/moodle-plugin-ci ci ^2
   - export PATH="$(cd ci/bin; pwd):$(cd ci/vendor/bin; pwd):$PATH"
+  - google-chrome-stable --headless --disable-gpu --remote-debugging-port=9222 http://localhost &
 
 install:
   - moodle-plugin-ci install
@@ -56,10 +66,6 @@ script:
   - moodle-plugin-ci savepoints
   - moodle-plugin-ci mustache
   - moodle-plugin-ci grunt
-  - moodle-plugin-ci phpunit --coverage-text
+  - moodle-plugin-ci phpunit
   - moodle-plugin-ci behat
   - moodle-plugin-ci behat --profile chrome
-  - moodle-plugin-ci phpunit --coverage-clover
-
-after_success:
-  - moodle-plugin-ci coveralls-upload
