bionic no javascript

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,5 @@
 language: php
-dist: xenial
+dist: bionic
 
 notifications:
   email:
@@ -10,13 +10,15 @@ sudo: required
 
 services:
   - mysql
-  
+
 addons:
   firefox: "47.0.1"
   postgresql: "9.6"
+  chrome: stable
   apt:
     packages:
       - openjdk-8-jre-headless
+      - chromium-chromedriver
 
 cache:
   directories:
@@ -33,15 +35,13 @@ env:
 
 matrix:
   include:
-    - php: 7.1
-      env: DB=pgsql MOODLE_BRANCH=MOODLE_35_STABLE
     - php: 7.2
       env: DB=pgsql MOODLE_BRANCH=MOODLE_36_STABLE
-    - php: 7.3
+    - php: 7.2
       env: DB=pgsql MOODLE_BRANCH=MOODLE_37_STABLE
     - php: 7.3
       env: DB=pgsql MOODLE_BRANCH=master
-
+  
 before_install:
   - phpenv config-rm xdebug.ini
   - nvm install 8.9
@@ -49,6 +49,7 @@ before_install:
   - cd ../..
   - composer create-project -n --no-dev --prefer-dist blackboard-open-source/moodle-plugin-ci ci ^2
   - export PATH="$(cd ci/bin; pwd):$(cd ci/vendor/bin; pwd):$PATH"
+  - google-chrome-stable --headless --disable-gpu --remote-debugging-port=9222 http://localhost &
 
 install:
   - moodle-plugin-ci install
@@ -65,3 +66,4 @@ script:
   - moodle-plugin-ci grunt
   - moodle-plugin-ci phpunit
   - moodle-plugin-ci behat
+  - moodle-plugin-ci behat --profile chrome
