--- a/.travis.yml
+++ b/.travis.yml
@@ -31,7 +31,6 @@ php:
 env:
   - DB=pgsql MOODLE_BRANCH=master
   - DB=mysqli MOODLE_BRANCH=master
-  - DB=mariadb MOODLE_BRANCH=master
 
 matrix:
   include:
@@ -39,6 +38,8 @@ matrix:
       env: DB=pgsql MOODLE_BRANCH=MOODLE_36_STABLE
     - php: 7.2
       env: DB=pgsql MOODLE_BRANCH=MOODLE_37_STABLE
+    - php: 7.2
+      env: DB=pgsql MOODLE_BRANCH=MOODLE_38_STABLE
     - php: 7.3
       env: DB=pgsql MOODLE_BRANCH=master
 
