--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,9 @@
 language: php
+
+os:
+  - linux
+
 dist: bionic
-
-notifications:
-  email:
-    recipients:
-        - rdebleu@eWallah.net
-
-sudo: required
 
 services:
   - mysql
@@ -14,11 +11,6 @@ services:
 addons:
   firefox: "47.0.1"
   postgresql: "9.6"
-  chrome: stable
-  apt:
-    packages:
-      - openjdk-8-jre-headless
-      - chromium-chromedriver
 
 cache:
   directories:
@@ -26,50 +18,52 @@ cache:
     - $HOME/.npm
 
 php:
- - 7.2
+ - 7.3
 
 env:
   - DB=pgsql MOODLE_BRANCH=master
   - DB=mysqli MOODLE_BRANCH=master
 
-matrix:
+jobs:
   include:
-    - php: 7.2
-      env: DB=pgsql MOODLE_BRANCH=MOODLE_36_STABLE
-    - php: 7.2
-      env: DB=pgsql MOODLE_BRANCH=MOODLE_37_STABLE
-    - php: 7.2
-      env: DB=pgsql MOODLE_BRANCH=MOODLE_38_STABLE
-    - php: 7.3
+    - php: 7.1
+      env: DB=pgsql MOODLE_BRANCH=MOODLE_35_STABLE
+    - env: DB=pgsql MOODLE_BRANCH=MOODLE_37_STABLE
+    - env: DB=pgsql MOODLE_BRANCH=MOODLE_38_STABLE
+    - php: 7.4
       env: DB=pgsql MOODLE_BRANCH=master
 
 before_install:
   - phpenv config-rm xdebug.ini
-  - nvm install 8.9
-  - nvm use 8.9
+  - nvm install 14.2.0
   - cd ../..
   - composer create-project -n --no-dev --prefer-dist blackboard-open-source/moodle-plugin-ci ci ^2
   - export PATH="$(cd ci/bin; pwd):$(cd ci/vendor/bin; pwd):$PATH"
-  - google-chrome-stable --headless --disable-gpu --remote-debugging-port=9222 http://127.0.0.1 &
 
 install:
   - moodle-plugin-ci install
 
 script:
-  - /home/travis/build/moodle/vendor/bin/phpunit "provider_testcase" /home/travis/build/moodle/privacy/tests/provider_test.php
-  - /home/travis/build/moodle/vendor/bin/phpunit "tool_dataprivacy_expired_contexts_testcase" /home/travis/build/moodle/admin/tool/dataprivacy/tests/expired_contexts_test.php
+  - moodle-plugin-ci phpunit --coverage-text --coverage-clover
+  - moodle-plugin-ci behat
+  - moodle-plugin-ci behat --dump /home/travis/build/moodle/blocks/admin_bookmarks
   - moodle-plugin-ci phplint
   - moodle-plugin-ci phpcpd
   - moodle-plugin-ci phpmd
-  - moodle-plugin-ci phpdoc || true
+  - moodle-plugin-ci phpdoc
   - moodle-plugin-ci codechecker
   - moodle-plugin-ci validate
   - moodle-plugin-ci savepoints
   - moodle-plugin-ci mustache
-  - moodle-plugin-ci grunt
-  - moodle-plugin-ci phpunit --coverage-text --coverage-clover
-  - moodle-plugin-ci behat
-  - moodle-plugin-ci behat --profile chrome
+  - moodle-plugin-ci grunt || true
+  - /home/travis/build/moodle/vendor/bin/phpunit "provider_testcase" /home/travis/build/moodle/privacy/tests/provider_test.php
+  - /home/travis/build/moodle/vendor/bin/phpunit "tool_dataprivacy_expired_contexts_testcase" /home/travis/build/moodle/admin/tool/dataprivacy/tests/expired_contexts_test.php
+  - >
+        if [ "$MOODLE_BRANCH" = 'master' ];
+        then
+            php /home/travis/build/moodle/admin/tool/behat/cli/init.php -a="classic"
+            moodle-plugin-ci behat --suite="classic"
+        fi
 
 after_success:
   - moodle-plugin-ci coveralls-upload
