--- a/.travis.yml
+++ b/.travis.yml
@@ -30,6 +30,7 @@ jobs:
       env: DB=pgsql MOODLE_BRANCH=MOODLE_35_STABLE
     - env: DB=pgsql MOODLE_BRANCH=MOODLE_37_STABLE
     - env: DB=pgsql MOODLE_BRANCH=MOODLE_38_STABLE
+    - env: DB=pgsql MOODLE_BRANCH=MOODLE_39_STABLE
     - php: 7.4
       env: DB=pgsql MOODLE_BRANCH=master
 
@@ -37,7 +38,7 @@ before_install:
   - phpenv config-rm xdebug.ini
   - nvm install 14.2.0
   - cd ../..
-  - composer create-project -n --no-dev --prefer-dist blackboard-open-source/moodle-plugin-ci ci ^2
+  - composer create-project -n --no-dev --prefer-dist moodlehq/moodle-plugin-ci ci ^2
   - export PATH="$(cd ci/bin; pwd):$(cd ci/vendor/bin; pwd):$PATH"
 
 install:
